--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>CO LIBS - 一个基于 Antd 中后台前端解决方案</title>
-  <base href="/">
+  <base href="/frontend/">
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <link rel="manifest" href="./assets/pwa-manifest.json">
@@ -19,15 +19,15 @@
 <body ontouchstart>
   <app-root>
     <div
-      style="position:absolute;top:0;left:0;right:0;bottom:0;display:flex;justify-content:center;align-items:center;font-size:14px;font-family:Helvetica;">
+      style="position:absolute;top:0;right:0;bottom:0;left:0;display:flex;align-items:center;justify-content:center;font-size:14px;font-family:Helvetica;">
       loading...</div>
   </app-root>
   <div id="_ie"
-    style="display:none;position:absolute;top:0;left:0;right:0;bottom:0;text-align:center;padding-top:32px;background:#fff;font-size:22px;z-index:9999;">
+    style="position:absolute;top:0;right:0;bottom:0;left:0;z-index:9999;display:none;padding-top:32px;font-size:22px;text-align:center;background:#fff;">
     Your browser is not supported for NG-ALAIN document site
   </div>
   <div id="_slow"
-    style="display:none;position:absolute;top:0;left:0;right:0;bottom:0;text-align:center;justify-content:center;align-items:center;background:#fff;z-index:9999;">
+    style="position:absolute;top:0;right:0;bottom:0;left:0;z-index:9999;display:none;align-items:center;justify-content:center;text-align:center;background:#fff;">
     <div>
       <h1 style="font-size:22px;">KEEPING LOAD...</h1>
       <p style="margin: 0; font-size: 16px;">The network is slow, please try to access the <a
