fix(service:auth): fix FB error

--- a/src/index.html
+++ b/src/index.html
@@ -91,5 +91,6 @@
       }
     </script>
     <script src="./assets/highlight.pack.js"></script>
+    <script src="./assets/ckeditor/ckeditor.js"></script>
   </body>
 </html>
