迁移地图组件

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico" />
     <link rel="apple-touch-icon" sizes="144x144" href="./assets/img/logo-color.png" />
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="./assets/img/logo-color.png" />
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1909561_azxkiacfqtm.css">
+    <link href="https://api.mapbox.cn/mapbox-gl-js/v1.11.1/mapbox-gl.css" rel="stylesheet" />
   </head>
 
   <body ontouchstart>
@@ -92,5 +94,6 @@
     </script>
     <script src="./assets/highlight.pack.js"></script>
     <script src="./assets/ckeditor/ckeditor.js"></script>
+    <script src="https://api.mapbox.cn/mapbox-gl-js/v1.11.1/mapbox-gl.js"></script>
   </body>
 </html>
